--- a/Main/index.html
+++ b/Main/index.html
@@ -170,7 +170,7 @@
           adipisicing elit. Fugiat impedit ullam laboriosam ea nisi. Impedit
           ullam laboriosam ea nisi."
         </p>
-        <h2>Connor Quinn</h2>
+        <h2>George Elias</h2>
         <a href="#" class="material-symbols-rounded">expand_more</a>
       </div>
     </section>
