--- a/Main/index.html
+++ b/Main/index.html
@@ -43,19 +43,10 @@
         </div>
         <div class="right-side">
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
-            enim omnis ullam aperiam. Temporibus facere, nesciunt similique
-            omnis quibusdam ipsa blanditiis rem doloremque quisquam doloribus
-            architecto deleniti autem ullam non. Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Mollitia enim omnis ullam aperiam.
+Alaska Tour & Travel is here to help with an extensive list of exciting Alaska vacation packages -- all easily customized to meet your specific needs. Or create the perfect vacation from scratch by choosing from our individual hotel, day tour, and transportation options including great Alaska travel deals.
           </p>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
-            enim omnis ullam aperiam. Temporibus facere, nesciunt similique
-            omnis quibusdam ipsa blanditiis rem doloremque quisquam doloribus
-            architecto deleniti autem ullam non. Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Mollitia enim omnis ullam aperiam.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Our Alaska cruises are more popular then ever, and we also have a great selection of pre and post cruise tour packages designed to connect with with all the major Alaska cruise lines. Call Alaska Tour & Travel today at 800-208-0200, or contact us online... we'll be happy to answer your questions and help you set up the Alaska vacation of a lifetime.
           </p>
           <button class="cta">read more</button>
         </div>
