--- a/Main/index.html
+++ b/Main/index.html
@@ -91,28 +91,15 @@ Alaska Tour & Travel is here to help with an extensive list of exciting Alaska v
         </div>
         <div class="right-side">
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
-            enim omnis ullam aperiam. Temporibus facere, nesciunt similique
-            omnis quibusdam ipsa blanditiis rem doloremque quisquam doloribus
-            architecto deleniti autem ullam non. Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit.
+Your Bears, Trains and Icebergs adventures starts with a scenic ride on the Alaska Railroad's Glacier Discovery train. The train departs from the Anchorage Depot located at 411 West First Avenue at 9:45am. After traveling through Anchorage you will descend through the Anchorage Coastal Wildlife Refuge. 
           </p>
           <h2>What To Wear</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
-            enim omnis ullam aperiam. Temporibus facere, nesciunt similique
-            omnis quibusdam ipsa blanditiis rem doloremque quisquam doloribus
-            architecto deleniti autem ullam non. Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit. Mollitia enim omnis ullam aperiam.
-            Temporibus facere, nesciunt.
+Your trip includes professional guides, raingear, rubber boots and a small snack. Dress warmly in layers as conditions around the icebergs can be chilly. Please bring thick socks (to wear with provided rubber boots), warm clothes (wear synthetic layers and bring a rain coat), warm hat and gloves. You may wish to bring binoculars and a camera if you have them.
           </p>
           <h2>Reservations</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
-            enim omnis ullam aperiam. Temporibus facere, nesciunt similique
-            omnis quibusdam ipsa blanditiis rem doloremque quisquam doloribus
-            architecto deleniti autem ullam non. Lorem ipsum dolor, sit amet
-            consectetur adipisicing elit.
+You can click on the button below or the following link to add Bears, Train & Icebergs with Rail to your My Alaska trip planner where you can request a reservation or continue to browse for additional services. For reservations or additional information you can also call 800-208-0200 or contact us online.
           </p>
         </div>
       </div>
@@ -154,12 +141,7 @@ Alaska Tour & Travel is here to help with an extensive list of exciting Alaska v
           alt="Photo of a Connor Quinn"
         />
         <p>
-          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-          impedit ullam laboriosam ea nisi, eveniet veritatis nesciunt
-          accusantium vel ipsa at voluptatum pariatur officia temporibus minima
-          nihil tenetur, eum quia! Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Fugiat impedit ullam laboriosam ea nisi. Impedit
-          ullam laboriosam ea nisi."
+“This was a fantastic experience, we saw so much, the wildlife, the scenery and met interesting people and really got to know Alaska! It really was the best way to see Alaska! We loved getting out onto the glacier with crampons. My daughter loved the ice climbing. Sea kayaking was great. Thank you for a memorable, unique trip! ”
         </p>
         <h2>George Elias</h2>
         <a href="#" class="material-symbols-rounded">expand_more</a>
